--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ tools/cooja/apps/serial_socket/lib/
 tools/coffee-manager/coffee.jar
 tools/cooja/apps/avrora/lib/cooja_avrora.jar
 tools/cooja/apps/collect-view/cooja-collect-view.jar
+tools/z80/java/bin/
 
 # sdcc build artifacts
 contiki-sensinode.lib
