--- a/Makefile.include
+++ b/Makefile.include
@@ -82,7 +82,7 @@ endif
 CONTIKI_SOURCEFILES += $(CONTIKIFILES)
 
 CONTIKIDIRS += ${addprefix $(CONTIKI)/core/,dev lib net net/mac net/rime \
-                 net/rpl net/loadng net/orpl net/featurecast net/ipsec sys cfs ctk lib/ctk loader . }
+                 net/rpl net/rrpl net/orpl net/featurecast net/ipsec sys cfs ctk lib/ctk loader . }
 
 oname = ${patsubst %.c,%.o,${patsubst %.S,%.o,$(1)}}
 
