--- a/examples-calipso/orpl/examples-simple/Makefile
+++ b/examples-calipso/orpl/examples-simple/Makefile
@@ -1,6 +1,6 @@
 CONTIKI=../../..
 
-CONTIKI_PROJECT = app-collect-only
+CONTIKI_PROJECT = app-collect-only app-one-to-one
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 TARGET=sky
 
