wos-client: added process to report radio stats

--- a/examples-calipso/wos-example/Makefile
+++ b/examples-calipso/wos-example/Makefile
@@ -1,4 +1,4 @@
-all: wos-example
+all: wos-example wos-server
 # use this target explicitly if requried: er-plugtest-server
 
 # variable for this Makefile
