rrpl for the example

--- a/examples-calipso/wos-example/rpl-border-router/Makefile
+++ b/examples-calipso/wos-example/rpl-border-router/Makefile
@@ -3,18 +3,22 @@ all: $(CONTIKI_PROJECT)
 
 CONTIKI=../../..
 
-RRPL = 0
+RRPL = 1
 WITH_UIP6=1
 UIP_CONF_IPV6=1
 
 ifeq ($(RRPL), 1)
+CFLAGS += -D'RRPL_CONF_IS_COORDINATOR()=1'
 CFLAGS+= -DUIP_CONF_IPV6_RPL=0
 CFLAGS+= -DWITH_IPV6_RRPL=1 
 CFLAGS+= -DUSE_OPT=1 
 CFLAGS+= -DRRPL_CONF_SND_QRY=1 
 #CFLAGS += -DUIP_CONF_ND6_SEND_NA=0 
-CFLAGS+= -RRPL_RANDOM_WAIT=1 
-CFLAGS+= -DRESOLV_CONF_SUPPORTS_MDNS=0 
+CFLAGS+= -DRRPL_RANDOM_WAIT=1 
+CFLAGS+= -DRESOLV_CONF_SUPPORTS_MDNS=0
+CFLAGS += -DRRPL_CONF_IS_SINK=1 
+
+CFLAGS += -DUIP_CONF_ROUTER=1  
 
 else
 CFLAGS+= -DUIP_CONF_IPV6_RPL
@@ -29,11 +33,6 @@ ifeq ($(PREFIX),)
  PREFIX = aaaa::1/64
 endif
 
-ifeq ($(RRPL), 1)
-CFLAGS += -DRRPL_CONF_IS_SINK=1 
-CFLAGS += -DRESOLV_CONF_SUPPORTS_MDNS=0 
-CFLAGS += -DUIP_CONF_ROUTER=1 
-endif
 
 include $(CONTIKI)/Makefile.include
 
